src/z80asm/z80asm2/t/20-preproc/expected/dma_wr5_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/dma_wr5_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/dma_wr5_01.asm...
t/20-preproc/input/dma_wr5_01.asm:1:1: error: DMA_WR5 not supported on z80
    dma.wr5 0x00
    ^
